Mon Nov 27 14:36:11 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-srec/srec.exp: Add setup_xfail calls for i[345]86-*-aout*.

	* ld-srec/sr1.c (V_SPILL, V_FILL): Define.
	* ld-srec/sr3.cc: Likewise.

Tue Nov 21 16:05:53 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-empic/empic.exp: Update for changes in objdump output.

Wed Nov 15 17:42:48 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-srec/srec.exp: New tests.
	* ld-srec/sr1.c, ld-srec/sr2.c, ld-srec/sr3.cc: New files.
	* lib/ld.exp (ld_simple_link): Discard warnings about not being
	able to find the entry symbol.

Tue Nov 14 20:03:54 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-sh/sh2.c (__main): Define.

Mon Nov  6 14:39:18 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-empic/empic.exp: Accept a . in the address symbol.

	* ld-shared/shared.exp: Run tests on rs6000*-*-aix* and
	powerpc*-*-aix*.  Add code to create appropriate exports files,
	and pass appropriate compilation flags, and test against
	appropriate expected output.
	* ld-shared/xcoff.dat: New file.
	* ld-shared/main.c: Put #ifndef XCOFF_TEST around tests that can
	not be linked using XCOFF.  Use shlib_shlibvar1 as a sample
	function pointer, rather than shlib_mainvar.
	* ld-shared/sh1.c: Likewise.
	* ld-shared/shared.dat: Update for change from using shlib_mainvar
	to using shlib_shlibvar1.
	* ld-shared/sun4.dat: Likewise.

Sat Oct 28 01:54:25 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-scripts/script.t: Put .pr in .text, and .rw in .data, for
	convenience when testing XCOFF.

Thu Oct 26 22:53:17 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-bootstrap/bootstrap.exp: On AIX, pass -bI/lib/syscalls.exp
	along with --static.

	* ld-scripts/script.s: Make symbols global.

Fri Oct 20 12:22:16 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-undefined/undefined.exp: Add setup_xfails for arm*-*-pe*.

Fri Sep 29 11:06:10 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-undefined/undefined.exp: Use -e when invoking the linker, to