@@ -1,3 +1,7 @@
+Wed Nov 29 13:01:10 1995  Ian Lance Taylor  <ian@cygnus.com>
+
+	* ld-srec/srec.exp: Add setup_xfail for i960 COFF targets.
+
 Mon Nov 27 14:36:11 1995  Ian Lance Taylor  <ian@cygnus.com>
 
 	* ld-srec/srec.exp: Add setup_xfail calls for i[345]86-*-aout*.
